force-app/main/default/objects/OA_AI_Model__mdt/OA_AI_Model__mdt.object-meta.xml
<CustomObject>
    <label>OA AI Model</label>
    <pluralLabel>OA AI Models</pluralLabel>
</CustomObject>