force-app/main/default/objects/OA_AI_Model__mdt/fields/Fallback_Model__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Model__c</fullName>
    <label>Fallback Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>