force-app/main/default/objects/OA_AI_Model__mdt/fields/Fallback_Provider__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Provider__c</fullName>
    <label>Fallback Provider</label>
    <length>40</length>
    <type>Text</type>
</CustomField>