force-app/main/default/objects/OA_AI_Model__mdt/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <label>Max Tokens</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>