force-app/main/default/objects/OA_AI_Model__mdt/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>