force-app/main/default/objects/OA_AI_Model__mdt/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <length>40</length>
    <type>Text</type>
</CustomField>